--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,13 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+input, select{
+  width: 10%;
+  margin-bottom: 1rem;
+}
+
+img{
+  width: 10%;
+  margin-bottom: 1rem;
+}
