--- a/src/App.css
+++ b/src/App.css
@@ -93,9 +93,9 @@ header{
   grid-template-columns: 10fr 700px;
 }
 .ken-card{
-  height: 430px ;
-  position: top;
-  text-align: center;
+  height: 540px ;
+  position:absolute;
+  right:900px
 }
 .characteristics{
   width: 400px;
@@ -105,8 +105,9 @@ header{
   text-align: center;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.3s ease;
-  margin: 20px;
-  margin-bottom: 300px
+  margin: 520px;
+  margin-bottom: px;
+  position:relative;
 
 }
 .header-title{
@@ -143,4 +144,14 @@ ul{
   margin-bottom: 300px;
   
 
+}
+.bio{
+  font-size: 20px
+}
+.header-title{
+  font-size: 60px;
+
+}
+.avatar-image{
+  width: 150px;
 }
