--- a/src/App.css
+++ b/src/App.css
@@ -134,9 +134,10 @@ ul{
 }
 
 .search-bar{
-  width: 150px;
+  width: 200px;
   display: inline-block;
-  margin-top: 50px;
+  margin-top: 60px;
+  height: 25px;
 
 }
 .bottom-text{
